--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,152 +9,153 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <picture>
-        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
-          alt="Логотип туристического городка в штате Аризона.">
-      </picture>
-    </a>
-    <nav class="main-nav main-nav--opened main-nav--nojs">
-      <button class="main-nav__toggle toggle" type="button">
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="index.html">
-            Главная
+  <div class="page__container">
+    <header class="main-header">
+      <a class="main-header__logo" href="index.html">
+        <picture>
+          <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
+            alt="Логотип туристического городка в штате Аризона.">
+        </picture>
+      </a>
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <button class="main-nav__toggle toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">
+              Фото и видео
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-container">
+
+      <section class="catalog">
+        <h1 class="main-container__title title">Фото и видео</h1>
+        <p class="main-container__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
+          забыть о политике и экономике.</p>
+
+        <article class="catalog__photo-block">
+          <a class="catalog__picture-wrapper" href="#">
+            <picture>
+              <source media="(min-width: 1200px)" width="172" height="196" srcset="#">
+              <source media="(min-width: 768px)" width="168" height="200" srcset="#">
+              <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
+            </picture>
           </a>
+          <div class="catalog__wrapper">
+            <h2 class="catalog__title title">
+              <a class="catalog__title-link" href="#">Неродные просторы</a>
+            </h2>
+            <span class="catalog__text">Автор фото: Борис</span>
+            <span class="catalog__like">1350</span>
+          </div>
+        </article>
+
+        <article class="catalog__photo-block">
+          <a class="catalog__picture-wrapper" href="#">
+            <picture>
+              <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
+              <source media="(min-width: 768px)" width="168" height="200" srcset="#">
+              <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
+            </picture>
+          </a>
+          <div class="catalog__wrapper">
+            <h2 class="catalog__title title">
+              <a class="catalog__title-link" href="#">Местная растительность</a>
+            </h2>
+            <span class="catalog__text">Автор фото: Сергей</span>
+            <span class="catalog__like">143</span>
+          </div>
+        </article>
+
+        <article class="catalog__photo-block">
+          <a class="catalog__picture-wrapper" href="#">
+            <picture>
+              <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
+              <source media="(min-width: 768px)" width="168" height="200" srcset="#">
+              <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
+            </picture>
+          </a>
+          <div class="catalog__wrapper">
+            <h2 class="catalog__title title">
+              <a class="catalog__title-link" href="#">Дорога на север</a>
+            </h2>
+            <span class="catalog__text">Автор фото: Петр</span>
+            <span class="catalog__like">96</span>
+          </div>
+        </article>
+
+        <article class="catalog__photo-block">
+          <a class="catalog__picture-wrapper" href="#">
+            <picture>
+              <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
+              <source media="(min-width: 768px)" width="168" height="200" srcset="#">
+              <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
+            </picture>
+          </a>
+          <div class="catalog__wrapper">
+            <h2 class="catalog__title title">
+              <a class="catalog__title-link" href="#">Мост дьявола</a>
+            </h2>
+            <span class="catalog__text">Автор фото: Антон</span>
+            <span class="catalog__like">254</span>
+          </div>
+        </article>
+
+        <div class="catalog__video-block">
+          <p class="catalog__headline">Все еще сомневаетесь?</p>
+          <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+            очередной раз!</p>
+          <a class="catalog__link" href="#" aria-label="Страница просмотра видео.">
+            <img>
+          </a>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="main-footer">
+      <p class="main-footer__title">#visitSedona</p>
+      <ul class="main-footer__social-list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
+            aria-label="Мы в ВКонтакте."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">
-            Фото и видео
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
+            aria-label="Мы в Телеграмм."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">
-            Форма отзыва
-          </a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">
-            HTML Academy
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+            aria-label="Мы в Ютуб."></a>
         </li>
       </ul>
-    </nav>
-  </header>
 
-  <main class="main-container">
-
-    <section class="catalog">
-      <h1 class="main-container__title title">Фото и видео</h1>
-      <p class="main-container__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
-        забыть о политике и экономике.</p>
-
-      <article class="catalog__photo-block">
-        <a class="catalog__picture-wrapper" href="#">
-          <picture>
-            <source media="(min-width: 1200px)" width="172" height="196" srcset="#">
-            <source media="(min-width: 768px)" width="168" height="200" srcset="#">
-            <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
-          </picture>
-        </a>
-        <div class="catalog__wrapper">
-          <h2 class="catalog__title title">
-            <a class="catalog__title-link" href="#">Неродные просторы</a>
-          </h2>
-          <span class="catalog__text">Автор фото: Борис</span>
-          <span class="catalog__like">1350</span>
-        </div>
-      </article>
-
-      <article class="catalog__photo-block">
-        <a class="catalog__picture-wrapper" href="#">
-          <picture>
-            <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
-            <source media="(min-width: 768px)" width="168" height="200" srcset="#">
-            <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
-          </picture>
-        </a>
-        <div class="catalog__wrapper">
-          <h2 class="catalog__title title">
-            <a class="catalog__title-link" href="#">Местная растительность</a>
-          </h2>
-          <span class="catalog__text">Автор фото: Сергей</span>
-          <span class="catalog__like">143</span>
-        </div>
-      </article>
-
-      <article class="catalog__photo-block">
-        <a class="catalog__picture-wrapper" href="#">
-          <picture>
-            <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
-            <source media="(min-width: 768px)" width="168" height="200" srcset="#">
-            <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
-          </picture>
-        </a>
-        <div class="catalog__wrapper">
-          <h2 class="catalog__title title">
-            <a class="catalog__title-link" href="#">Дорога на север</a>
-          </h2>
-          <span class="catalog__text">Автор фото: Петр</span>
-          <span class="catalog__like">96</span>
-        </div>
-      </article>
-
-      <article class="catalog__photo-block">
-        <a class="catalog__picture-wrapper" href="#">
-          <picture>
-            <source media="(min-width: 1300px)" width="172" height="196" srcset="#">
-            <source media="(min-width: 768px)" width="168" height="200" srcset="#">
-            <img class="catalog__image" width="140" height="112" src="#" srcset="#" alt="Изображение .">
-          </picture>
-        </a>
-        <div class="catalog__wrapper">
-          <h2 class="catalog__title title">
-            <a class="catalog__title-link" href="#">Мост дьявола</a>
-          </h2>
-          <span class="catalog__text">Автор фото: Антон</span>
-          <span class="catalog__like">254</span>
-        </div>
-      </article>
-
-      <div class="catalog__video-block">
-        <p class="catalog__headline">Все еще сомневаетесь?</p>
-        <p class="catalog__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-          очередной раз!</p>
-        <a class="catalog__link" href="#" aria-label="Страница просмотра видео.">
-          <img>
-        </a>
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
       </div>
-    </section>
-
-  </main>
-
-  <footer class="main-footer">
-    <p class="main-footer__title">#visitSedona</p>
-    <ul class="main-footer__social-list social-list">
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
-          aria-label="Мы в ВКонтакте."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
-          aria-label="Мы в Телеграмм."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-          aria-label="Мы в Ютуб."></a>
-      </li>
-    </ul>
-
-    <div class="main-footer__copyright copyright">
-      <span class="copyright__text">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
-    </div>
-  </footer>
-
+    </footer>
+  </div>
 </body>
 
 </html>
