--- a/source/form.html
+++ b/source/form.html
@@ -9,168 +9,170 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <picture>
-        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
-          alt="Логотип туристического городка в штате Аризона.">
-      </picture>
-    </a>
-    <nav class="main-nav main-nav--opened main-nav--nojs">
-      <button class="main-nav__toggle toggle" type="button">
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="index.html">
-            Главная
-          </a>
+  <div class="page__container">
+    <header class="main-header">
+      <a class="main-header__logo" href="index.html">
+        <picture>
+          <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
+            alt="Логотип туристического городка в штате Аризона.">
+        </picture>
+      </a>
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <button class="main-nav__toggle toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">
+              Фото и видео
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main-container">
+      <div class="content-wrapper">
+        <h1 class="main-container__title title">Оставьте свой отзыв</h1>
+        <p class="main-container__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
+          посещенных вами достопримечательностях</p>
+        <form class="feedback-form" action="https://echo.htmlacademy.ru/" method="post">
+          <fieldset class="feedback-form__group feedback-form__group--information">
+            <legend class="feedback-form__title">Представьтесь:</legend>
+            <label class="feedback-form__label label">
+              <span class="feedback-form__content">Имя:*</span>
+              <input class="feedback-form__input input" type="text" name="name" placeholder="Пётр"
+                aria-label="Поле ввода имени пользователя." required>
+            </label>
+            <label class="feedback-form__label label">
+              <span class="feedback-form__content">Фамилия:*</span>
+              <input class="feedback-form__input input" type="text" name="surname" placeholder="Пустота"
+                aria-label="Поле ввода фамилии пользователя." required>
+            </label>
+            <label class="feedback-form__label label">
+              <span class="feedback-form__content">Отчество:</span>
+              <input class="feedback-form__input input" type="text" name="middle_name" placeholder="Викторович"
+                aria-label="Поле ввода отчества пользователя.">
+            </label>
+          </fieldset>
+          <fieldset class="feedback-form__group feedback-form__group--contacts">
+            <legend class="feedback-form__title title">Контактная информация:</legend>
+            <label class="feedback-form__label label">
+              <span class="feedback-form__content">Контактный телефон*:</span>
+              <input class="feedback-form__input input" type="tel" name="tel" placeholder="Введите телефон"
+                aria-label="Поле ввода телефона пользователя." required>
+            </label>
+            <label class="feedback-form__label label">
+              <span class="feedback-form__content">Электронная почта*:</span>
+              <input class="feedback-form__input input" type="email" name="email" placeholder="Введите e-mail"
+                aria-label="Поле ввода электронной почты пользователя." required>
+            </label>
+          </fieldset>
+          <fieldset class="feedback-form__group feedback-form__group--experience">
+            <legend class="feedback-form__title">Ваше общее впечатление:</legend>
+            <label class="feedback-form__label">
+              <input class="feedback-form__radio-input input" type="radio" name="experience" value="positive" checked>
+              <span class="feedback-form__radio-description">Скорее положительное</span>
+            </label>
+            <label class="feedback-form__label">
+              <input class="feedback-form__radio-input input" type="radio" name="experience" value="negative">
+              <span class="feedback-form__radio-description">Скорее отрицательное</span>
+            </label>
+            <label class="feedback-form__label">
+              <input class="feedback-form__radio-input input" type="radio" name="experience"
+                value="difficult_to_answer">
+              <span class="feedback-form__radio-description">Затрудняюсь ответить</span>
+            </label>
+          </fieldset>
+          <fieldset class="feedback-form__group feedback-form__group--visited">
+            <legend class="feedback-form__title title">Посещенные достопримечательности:</legend>
+            <label class="feedback-form__label">
+              <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="devil_bridge"
+                checked>
+              <span class="feedback-form__checkbox-description">Мост Дьявола</span>
+            </label>
+            <label class="feedback-form__label">
+              <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="bell_mountain"
+                checked>
+              <span class="feedback-form__checkbox-description">Гора-Колокол</span>
+            </label>
+            <label class="feedback-form__label">
+              <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="slide_park"
+                checked>
+              <span class="feedback-form__checkbox-description">Слайд-парк</span>
+            </label>
+            <label class="feedback-form__label">
+              <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="red_rocks">
+              <span class="feedback-form__checkbox-description">Красные скалы</span>
+            </label>
+          </fieldset>
+          <fieldset class="feedback-form__group feedback-form__group--comments">
+            <legend class="feedback-form__title title">Опишите свои эмоции:</legend>
+            <textarea class="feedback-form__comment" name="comment" rows="5"
+              placeholder="Опишите подробно все свои восторги">
+          </textarea>
+          </fieldset>
+          <div class="feedback-form__send">
+            <button class="feedback-form__button button" type="submit">Отправить отзыв</button>
+            <span class="feedback-form__text">* — обязательные поля</span>
+          </div>
+        </form>
+
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <p class="main-footer__title">#visitSedona</p>
+      <ul class="main-footer__social-list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
+            aria-label="Мы в ВКонтакте."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">
-            Фото и видео
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
+            aria-label="Мы в Телеграмм."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">
-            Форма отзыва
-          </a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">
-            HTML Academy
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+            aria-label="Мы в Ютуб."></a>
         </li>
       </ul>
-    </nav>
-  </header>
 
-  <main class="main-container">
-    <div class="content-wrapper">
-      <h1 class="main-container__title title">Оставьте свой отзыв</h1>
-      <p class="main-container__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
-        посещенных вами достопримечательностях</p>
-      <form class="feedback-form" action="https://echo.htmlacademy.ru/" method="post">
-        <fieldset class="feedback-form__group feedback-form__group--information">
-          <legend class="feedback-form__title">Представьтесь:</legend>
-          <label class="feedback-form__label label">
-            <span class="feedback-form__content">Имя:*</span>
-            <input class="feedback-form__input input" type="text" name="name" placeholder="Пётр"
-              aria-label="Поле ввода имени пользователя." required>
-          </label>
-          <label class="feedback-form__label label">
-            <span class="feedback-form__content">Фамилия:*</span>
-            <input class="feedback-form__input input" type="text" name="surname" placeholder="Пустота"
-              aria-label="Поле ввода фамилии пользователя." required>
-          </label>
-          <label class="feedback-form__label label">
-            <span class="feedback-form__content">Отчество:</span>
-            <input class="feedback-form__input input" type="text" name="middle_name" placeholder="Викторович"
-              aria-label="Поле ввода отчества пользователя.">
-          </label>
-        </fieldset>
-        <fieldset class="feedback-form__group feedback-form__group--contacts">
-          <legend class="feedback-form__title title">Контактная информация:</legend>
-          <label class="feedback-form__label label">
-            <span class="feedback-form__content">Контактный телефон*:</span>
-            <input class="feedback-form__input input" type="tel" name="tel" placeholder="Введите телефон"
-              aria-label="Поле ввода телефона пользователя." required>
-          </label>
-          <label class="feedback-form__label label">
-            <span class="feedback-form__content">Электронная почта*:</span>
-            <input class="feedback-form__input input" type="email" name="email" placeholder="Введите e-mail"
-              aria-label="Поле ввода электронной почты пользователя." required>
-          </label>
-        </fieldset>
-        <fieldset class="feedback-form__group feedback-form__group--experience">
-          <legend class="feedback-form__title">Ваше общее впечатление:</legend>
-          <label class="feedback-form__label">
-            <input class="feedback-form__radio-input input" type="radio" name="experience" value="positive" checked>
-            <span class="feedback-form__radio-description">Скорее положительное</span>
-          </label>
-          <label class="feedback-form__label">
-            <input class="feedback-form__radio-input input" type="radio" name="experience" value="negative">
-            <span class="feedback-form__radio-description">Скорее отрицательное</span>
-          </label>
-          <label class="feedback-form__label">
-            <input class="feedback-form__radio-input input" type="radio" name="experience" value="difficult_to_answer">
-            <span class="feedback-form__radio-description">Затрудняюсь ответить</span>
-          </label>
-        </fieldset>
-        <fieldset class="feedback-form__group feedback-form__group--visited">
-          <legend class="feedback-form__title title">Посещенные достопримечательности:</legend>
-          <label class="feedback-form__label">
-            <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="devil_bridge"
-              checked>
-            <span class="feedback-form__checkbox-description">Мост Дьявола</span>
-          </label>
-          <label class="feedback-form__label">
-            <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="bell_mountain"
-              checked>
-            <span class="feedback-form__checkbox-description">Гора-Колокол</span>
-          </label>
-          <label class="feedback-form__label">
-            <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="slide_park"
-              checked>
-            <span class="feedback-form__checkbox-description">Слайд-парк</span>
-          </label>
-          <label class="feedback-form__label">
-            <input class="feedback-form__checkbox-input input" type="checkbox" name="visited" value="red_rocks">
-            <span class="feedback-form__checkbox-description">Красные скалы</span>
-          </label>
-        </fieldset>
-        <fieldset class="feedback-form__group feedback-form__group--comments">
-          <legend class="feedback-form__title title">Опишите свои эмоции:</legend>
-          <textarea class="feedback-form__comment" name="comment" rows="5"
-            placeholder="Опишите подробно все свои восторги">
-          </textarea>
-        </fieldset>
-        <div class="feedback-form__send">
-          <button class="feedback-form__button button" type="submit">Отправить отзыв</button>
-          <span class="feedback-form__text">* — обязательные поля</span>
-        </div>
-      </form>
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
+      </div>
+    </footer>
 
-    </div>
-  </main>
-
-  <footer class="main-footer">
-    <p class="main-footer__title">#visitSedona</p>
-    <ul class="main-footer__social-list social-list">
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
-          aria-label="Мы в ВКонтакте."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
-          aria-label="Мы в Телеграмм."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-          aria-label="Мы в Ютуб."></a>
-      </li>
-    </ul>
-
-    <div class="main-footer__copyright copyright">
-      <span class="copyright__text">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
-    </div>
-  </footer>
-
-  <div class="page__modal modal">
-    <div class="modal__send">
-      <p class="modal__title">Ваш отзыв отправлен!</p>
-      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
-        опубликуем его на сайте.</p>
-      <button class="modal__button button" type="button">Закрыть окно</button>
-    </div>
-    <div class="modal__error">
-      <p class="modal__title">Что-то пошло не так!</p>
-      <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="modal__button button" type="button">Ок</button>
+    <div class="page__modal modal">
+      <div class="modal__send">
+        <p class="modal__title">Ваш отзыв отправлен!</p>
+        <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
+          опубликуем его на сайте.</p>
+        <button class="modal__button button" type="button">Закрыть окно</button>
+      </div>
+      <div class="modal__error">
+        <p class="modal__title">Что-то пошло не так!</p>
+        <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="modal__button button" type="button">Ок</button>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
