--- a/source/index.html
+++ b/source/index.html
@@ -9,152 +9,154 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <picture>
-        <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
-          alt="Логотип туристического городка в штате Аризона.">
-      </picture>
-    </a>
-    <nav class="main-nav main-nav--opened main-nav--nojs">
-      <button class="main-nav__toggle toggle" type="button">
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="index.html">
-            Главная
-          </a>
+  <div class="page__container">
+    <header class="main-header">
+      <a class="main-header__logo" href="index.html">
+        <picture>
+          <img class="main-header__logo-image" src="img/sedona_logo.svg" width="185" height="96"
+            alt="Логотип туристического городка в штате Аризона.">
+        </picture>
+      </a>
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <button class="main-nav__toggle toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">
+              Фото и видео
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <section class="main-header__hero-block hero-block">
+        <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
+        <img class="hero-block__text" src="#" width="#" height="#"
+          alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
+      </section>
+
+
+    </header>
+
+    <main class="main-container">
+
+      <section class="advantages">
+        <h2 class="main-container__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__content-title">Настоящий городок</h3>
+            <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
+            <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <picture>
+              <source media="(min-width: 1200px)" width="800" height="256"
+                srcset="img/advantages-1-desktop.jpg 1x, img/advantages-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" width="512" height="256"
+                srcset="img/advantages-1-tablet.jpg 1x, img/advantages-1-tablet@2x.jpg 2x">
+              <img class="advantages__image" width="320" height="260" src="img/advantages-1-mobile.jpg"
+                srcset="img/advantages-1-mobile@2x.jpg 2x" alt="Изображение городка.">
+            </picture>
+            <ul class="advantages__service-list">
+              <li class="advantages__service-item">
+                <h4 class="advantages__service-title">Жилье</h4>
+                <p class="advantages__service-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="advantages__service-item">
+                <h4 class="advantages__service-title">Еда</h4>
+                <p class="advantages__service-description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages__service-item">
+                <h4 class="advantages__service-title">Сувениры</h4>
+                <p class="advantages__service-description">Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__content-title">Там есть мост Дьявола</h3>
+            <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
+            <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <picture>
+              <source media="(min-width: 1200px)" width="800" height="256"
+                srcset="img/advantages-2-desktop.jpg 1x, img/advantages-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" width="512" height="256"
+                srcset="img/advantages-2-tablet.jpg 1x, img/advantages-2-tablet@2x.jpg 2x">
+              <img class="advantages__image" width="320" height="260" src="img/advantages-2-mobile.jpg"
+                srcset="img/advantages-2-mobile@2x.jpg 2x" alt="Изображение городка.">
+            </picture>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__content-title">Небольшая площадь</h3>
+            <p class="advantages__content-number">— №3 —</p> <!--через каунтер-->
+            <p class="advantages__content-description">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__content-title">Красивая дорога</h3>
+            <p class="advantages__content-number">— №4 —</p> <!--через каунтер-->
+            <p class="advantages__content-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__content-title">Мало туристов</h3>
+            <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
+            <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="search-hotels">
+        <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
+        <p class="search-hotels__headline">Заинтересовались?</p>
+        <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          гостиниц в Седоне</p>
+        <a class="search-hotels__link" href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
+      </section>
+
+      <div class="map">
+        <iframe width="320" height="350">
+        </iframe>
+        <img src="#" width="320" height="350" alt="Метка адреса на карте.">
+      </div>
+
+    </main>
+
+    <footer class="main-footer">
+      <p class="main-footer__title">#visitSedona</p>
+      <ul class="main-footer__social-list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
+            aria-label="Мы в ВКонтакте."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">
-            Фото и видео
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
+            aria-label="Мы в Телеграмм."></a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">
-            Форма отзыва
-          </a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">
-            HTML Academy
-          </a>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
+            aria-label="Мы в Ютуб."></a>
         </li>
       </ul>
-    </nav>
 
-    <section class="main-header__hero-block hero-block">
-      <h1 class="visually-hidden">Сайт туристического городка в штате Аризона.</h1>
-      <img class="hero-block__text" src="#" width="#" height="#"
-        alt="Welcome to the gorgeous Sedona, beacause the Grand Canyon sucks!">
-    </section>
-
-
-  </header>
-
-  <main class="main-container">
-
-    <section class="advantages">
-      <h2 class="main-container__title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="main-container__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-      <ul class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__content-title">Настоящий городок</h3>
-          <p class="advantages__content-number">— №1 —</p> <!--через каунтер-->
-          <p class="advantages__content-description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <picture>
-            <source media="(min-width: 1200px)" width="800" height="256"
-              srcset="img/advantages-1-desktop.jpg 1x, img/advantages-1-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" width="512" height="256"
-              srcset="img/advantages-1-tablet.jpg 1x, img/advantages-1-tablet@2x.jpg 2x">
-            <img class="advantages__image" width="320" height="260" src="img/advantages-1-mobile.jpg"
-              srcset="img/advantages-1-mobile@2x.jpg 2x" alt="Изображение городка.">
-          </picture>
-          <ul class="advantages__service-list">
-            <li class="advantages__service-item">
-              <h4 class="advantages__service-title">Жилье</h4>
-              <p class="advantages__service-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="advantages__service-item">
-              <h4 class="advantages__service-title">Еда</h4>
-              <p class="advantages__service-description">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
-            </li>
-            <li class="advantages__service-item">
-              <h4 class="advantages__service-title">Сувениры</h4>
-              <p class="advantages__service-description">Не только китайского, но и местного производства!</p>
-            </li>
-          </ul>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__content-title">Там есть мост Дьявола</h3>
-          <p class="advantages__content-number">— №2 —</p> <!--через каунтер-->
-          <p class="advantages__content-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <picture>
-            <source media="(min-width: 1200px)" width="800" height="256"
-              srcset="img/advantages-2-desktop.jpg 1x, img/advantages-2-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" width="512" height="256"
-              srcset="img/advantages-2-tablet.jpg 1x, img/advantages-2-tablet@2x.jpg 2x">
-            <img class="advantages__image" width="320" height="260" src="img/advantages-2-mobile.jpg"
-              srcset="img/advantages-2-mobile@2x.jpg 2x" alt="Изображение городка.">
-          </picture>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__content-title">Небольшая площадь</h3>
-          <p class="advantages__content-number">— №3 —</p> <!--через каунтер-->
-          <p class="advantages__content-description">Все интересные места находятся очень близко</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__content-title">Красивая дорога</h3>
-          <p class="advantages__content-number">— №4 —</p> <!--через каунтер-->
-          <p class="advantages__content-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__content-title">Мало туристов</h3>
-          <p class="advantages__content-number">— №5 —</p> <!--через каунтер-->
-          <p class="advantages__content-description">Большинство едет в гранд каньон и толпится там</p>
-        </li>
-      </ul>
-    </section>
-
-    <section class="search-hotels">
-      <h2 class="visually-hidden">Блок поиска гостиницы.</h2>
-      <p class="search-hotels__headline">Заинтересовались?</p>
-      <p class="search-hotels__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
-        гостиниц в Седоне</p>
-      <a class="search-hotels__link" href="#" aria-label="Страница поиска гостиницы.">Найти гостиницу</a>
-    </section>
-
-    <div class="map">
-      <iframe width="320" height="350">
-      </iframe>
-      <img src="#" width="320" height="350" alt="Метка адреса на карте.">
-    </div>
-
-  </main>
-
-  <footer class="main-footer">
-    <p class="main-footer__title">#visitSedona</p>
-    <ul class="main-footer__social-list social-list">
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
-          aria-label="Мы в ВКонтакте."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
-          aria-label="Мы в Телеграмм."></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-          aria-label="Мы в Ютуб."></a>
-      </li>
-    </ul>
-
-    <div class="main-footer__copyright copyright">
-      <span class="copyright__text">Разработано</span>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
-    </div>
-  </footer>
+      <div class="main-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
+      </div>
+    </footer>
+  </div>
 
 </body>
 
